# Hour-Mosaic

./: .gitignore  CLAUDE.md  LICENSE  README.md  history.html  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
src/: history.css  history.ts  main.css  main.ts  settings.css  settings.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aggregator.rs  classifier.rs  commands.rs  config.rs  db.rs  events.rs  hotkey.rs  lib.rs  mac_permissions.rs  seed.json  seed.rs  store.rs  tracker.rs  types.rs
src/editor/: category-popover.ts  drag-select.ts  hour-editor.ts
src/history/: day-readonly.ts  heatmap-month.ts  metrics.ts
src/mosaic/: layout.ts  mosaic.ts  progressive.ts  pulse.ts  tiles.ts
src/settings-ui/: classification.ts  day-start.ts  grouping.ts  privacy.ts
src/state/: day-store.ts  events.ts  ipc.ts
src/theme/: default-palette.json  palette-loader.ts  tokens.css
src/ui/: menu.ts  paused-overlay.ts
